<resources>
    <string name="app_name">Master Mind</string>
    <string name="example"><u>For example:</u></string>
    <string name="facebook_app_id">528889727993941</string>
    <string name="fb_login_protocol_scheme">fb528889727993941</string>

    <string name="red">"red"</string>
    <string name="green">"green"</string>
    <string name="blue">"blue"</string>
    <string name="orange">"orange"</string>
    <string name="yellow">"yellow"</string>
    <string name="light">"light"</string>
    <string name="about">About</string>
    <string name="rules">Rules</string>
    <string name="goal">Goal</string>
    <string name="choose_your_hidden_row">choose your hidden row</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_room">join room</string>
    <string name="create_room">create room</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="time_left">00:30</string>
    <string name="winner">winner</string>
    <string name="want_to_buy_hint">Want To Buy Hint?</string>
    <string name="reveal_one_peg">Reveal One Peg -</string>
    <string name="your_opponent_wants_rematch">Your Opponent Wants Rematch</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="you_are_offline_please_reconnect">You Are Offline</string>
    <string name="please_reconnect_to_the_internet">Please reconnect to the internet</string>
    <string name="play_offline_mode">Play Offline Mode</string>
    <string name="or">OR</string>
    <string name="starting_game">Starting Game</string>
</resources>