<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/master_mind_back"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.JoinRoomFragment">


    <EditText
        android:id="@+id/roomCodeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_room_code"
        android:inputType="number"
        android:textColorHint="@color/colorTWhite"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/joinRoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_design"
        android:padding="10dp"
        android:text="@string/join_room"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/roomCodeEt"
        app:layout_constraintStart_toStartOf="@+id/roomCodeEt"
        app:layout_constraintTop_toBottomOf="@+id/roomCodeEt" />

    <Button
        android:id="@+id/createRoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_design"
        android:padding="10dp"
        android:text="@string/create_room"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>